{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 151,
  "lineage": "8a018fa6-c3bc-10ec-ec8e-b41bf679d646",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-8080",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-31T14:20:37.879-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-8080",
            "name": "events-prod-fw-allow-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "priority": 1000,
            "project": "mindful-primer-272612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-8080",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-31T14:20:37.895-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-http",
            "name": "events-prod-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "priority": 1000,
            "project": "mindful-primer-272612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-31T14:20:37.867-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-https",
            "name": "events-prod-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "priority": 1000,
            "project": "mindful-primer-272612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-03-31T14:20:37.879-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-icmp",
            "name": "events-prod-fw-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "priority": 1000,
            "project": "mindful-primer-272612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-03-31T14:20:37.861-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-internal",
            "name": "events-prod-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "priority": 1000,
            "project": "mindful-primer-272612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-internal",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-31T14:20:37.898-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-rdp",
            "name": "events-prod-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "priority": 1000,
            "project": "mindful-primer-272612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-31T14:20:37.871-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-ssh",
            "name": "events-prod-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "priority": 1000,
            "project": "mindful-primer-272612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/firewalls/events-prod-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_backend",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200309",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/zones/us-central1-c/disks/events-backend-server-prod-3ed47bfb"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/mindful-primer-272612/zones/us-central1-c/instances/events-backend-server-prod-3ed47bfb",
            "instance_id": "569551766982363859",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "QbbRu7Q79Ag=",
            "metadata_startup_script": "apt update; apt-get install git curl software-properties-common -y; curl -sL https://deb.nodesource.com/setup_13.x | sudo bash -; apt install nodejs -y; git clone https://github.com/drehnstrom/events-sample-node; cd events-sample-node/internal; export PORT=8080; npm install; node server.js",
            "name": "events-backend-server-prod-3ed47bfb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.76.112",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
                "network_ip": "10.10.1.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/regions/us-central1/subnetworks/events-prod-public-subnet-1",
                "subnetwork_project": "mindful-primer-272612"
              }
            ],
            "project": "mindful-primer-272612",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/zones/us-central1-c/instances/events-backend-server-prod-3ed47bfb",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-c"
          },
          "depends_on": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_web",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200309",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/zones/us-central1-c/disks/events-web-server-prod-3ed47bfb"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/mindful-primer-272612/zones/us-central1-c/instances/events-web-server-prod-3ed47bfb",
            "instance_id": "8512336612559817427",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "OHDhs8Wod_g=",
            "metadata_startup_script": "apt update; apt-get install git curl software-properties-common -y; curl -sL https://deb.nodesource.com/setup_13.x | sudo bash -; apt install nodejs -y; git clone https://github.com/drehnstrom/events-sample-node; cd events-sample-node/external; export PORT=80; export SERVER=http://10.10.1.10:8080; npm install; node server.js",
            "name": "events-web-server-prod-3ed47bfb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.216.34",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
                "network_ip": "10.10.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/regions/us-central1/subnetworks/events-prod-public-subnet-1",
                "subnetwork_project": "mindful-primer-272612"
              }
            ],
            "project": "mindful-primer-272612",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/zones/us-central1-c/instances/events-web-server-prod-3ed47bfb",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-c"
          },
          "depends_on": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "name": "events-prod-vpc",
            "project": "mindful-primer-272612",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-03-31T14:20:38.203-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/mindful-primer-272612/regions/us-central1/subnetworks/events-prod-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "events-prod-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/global/networks/events-prod-vpc",
            "private_ip_google_access": false,
            "project": "mindful-primer-272612",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mindful-primer-272612/regions/us-central1/subnetworks/events-prod-public-subnet-1"
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}